Actualización de la aplicación Wiki con Docker